--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Silkscreen:wght@700&display=swap');
 
+
+
 body {
   background-color: blueviolet;
   font-family: 'Silkscreen', sans-serif;
@@ -20,8 +22,8 @@ body {
 .titulo {
   box-sizing: border-box;
   color: hotpink;
-  width: 337px;
-  height: 50px;
+  width: auto;
+  height: auto;
   background-color: teal;
   border: 3px outset rgb(146, 54, 62);
   border-radius: 5px;
@@ -33,8 +35,8 @@ body {
 .subtitulo {
   box-sizing: border-box;
   color: hotpink;
-  width: 274px;
-  height: 45px;
+  width: auto;
+  height: auto;
   background-color: teal;
   border: 3px outset rgb(146, 54, 62);
   border-radius: 5px;
@@ -101,8 +103,8 @@ input {
   align-items: center;
 }
 
-.btn-ataque{
-  width: 180px;
+.boton-de-ataque{
+  width: 80px;
   height: 40px;
   border-radius: 20px;
   background: transparent;
@@ -153,6 +155,23 @@ input {
 
 input:checked + label{
   background-color: rgb(192, 55, 192);
+}
+
+#ver-mapa {
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+#ver-mapa button{
+  width: 80px;
+  height: 40px;
+  border-radius: 20px;
+  background: transparent;
+  border: 2px outset #fffb00;
+  color: #fffb00;
+  font-family: 'Poppins', sans-serif;
+  margin-top: 10px;
 }
 
 @media(max-width:360px){
