--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Silkscreen:wght@700&display=swap');
 
-
-
 body {
   background-color: blueviolet;
   font-family: 'Silkscreen', sans-serif;
 }
-/*verificar porque se sale al escrivir start*/
 #seleccionar-mascota {
   height: 96vh;
   width: 99%;
@@ -161,18 +158,14 @@ input:checked + label{
   flex-direction: column;
   align-items: center;
   justify-content: center;
+ 
 }
 
-#ver-mapa button{
-  width: 80px;
-  height: 40px;
-  border-radius: 20px;
-  background: transparent;
-  border: 2px outset #fffb00;
-  color: #fffb00;
-  font-family: 'Poppins', sans-serif;
-  margin-top: 10px;
+#mapa {
+  image-rendering: pixelated; 
+  border: 1px solid black; 
 }
+
 
 @media(max-width:360px){
   .caja-mascota,.titulo,.subtitulo{
